Use StAX instead of DocumentBuilder